--- a/packages/openapi-default-setter/package.json
+++ b/packages/openapi-default-setter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi-default-setter",
+  "name": "@commercebear/openapi-default-setter",
   "version": "7.0.1",
   "description": "Sets default values in request properties according to defaults defined in openapi parameter lists.",
   "main": "./dist/index.js",
@@ -13,7 +13,10 @@
     "test-watch": "../../bin/tsc && ../../bin/mocha --watch-extensions ts -w",
     "test": "../../bin/mocha"
   },
-  "repository": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-default-setter",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "https://github.com/commercebear/open-api",
   "keywords": [
     "openapi",
     "default",
@@ -22,10 +25,10 @@
   "author": "Joseph Spencer",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kogosoftwarellc/open-api/issues"
+    "url": "https://github.com/commercebear/open-api/issues"
   },
-  "homepage": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-default-setter#readme",
+  "homepage": "https://github.com/commercebear/open-api/tree/master/packages/openapi-default-setter#readme",
   "dependencies": {
-    "openapi-types": "^7.0.1"
+    "@commercebear/openapi-types": "^7.0.1"
   }
 }
