--- a/packages/openapi-jsonschema-parameters/package.json
+++ b/packages/openapi-jsonschema-parameters/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi-jsonschema-parameters",
+  "name": "@commercebear/openapi-jsonschema-parameters",
   "version": "7.0.1",
   "description": "Converts openapi parameters to a jsonschema format.",
   "main": "./dist/index.js",
@@ -10,7 +10,10 @@
     "test-watch": "../../bin/tsc && ../../bin/mocha --watch-extensions ts -w",
     "test": "../../bin/mocha"
   },
-  "repository": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-jsonschema-parameters",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "https://github.com/commercebear/open-api",
   "keywords": [
     "openapi",
     "parameters",
@@ -21,10 +24,10 @@
   "author": "Joseph Spencer",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kogosoftwarellc/open-api/issues"
+    "url": "https://github.com/commercebear/open-api/issues"
   },
-  "homepage": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-jsonschema-parameters#readme",
+  "homepage": "https://github.com/commercebear/open-api/tree/master/packages/openapi-jsonschema-parameters#readme",
   "dependencies": {
-    "openapi-types": "^7.0.1"
+    "@commercebear/openapi-types": "^7.0.1"
   }
 }
