--- a/packages/fs-routes/package.json
+++ b/packages/fs-routes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fs-routes",
+  "name": "@commercebear/fs-routes",
   "version": "7.0.1",
   "description": "Scan a filesystem for route files.",
   "author": "Joseph Spencer",
@@ -15,7 +15,10 @@
     "test-watch": "../../bin/tsc && npm run pretest && ../../bin/mocha --watch-extensions ts -w",
     "test": "../../bin/mocha"
   },
-  "repository": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/fs-routes",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "https://github.com/commercebear/open-api",
   "keywords": [
     "filesystem",
     "routes",
@@ -24,9 +27,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kogosoftwarellc/open-api/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3Afs-routes"
+    "url": "https://github.com/commercebear/open-api/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3Afs-routes"
   },
-  "homepage": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/fs-routes#readme",
+  "homepage": "https://github.com/commercebear/open-api/tree/master/packages/fs-routes#readme",
   "peerDependencies": {
     "glob": ">=7.1.6"
   }
