--- a/packages/openapi-framework/package.json
+++ b/packages/openapi-framework/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi-framework",
+  "name": "@commercebear/openapi-framework",
   "version": "7.0.1",
   "description": "An OpenAPI framework for any web framework",
   "main": "./dist/index.js",
@@ -13,7 +13,10 @@
     "test-watch": "../../bin/tsc && ../../bin/mocha --watch-extensions ts -w",
     "test": "../../bin/mocha"
   },
-  "repository": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-framework",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "https://github.com/commercebear/open-api",
   "keywords": [
     "openapi",
     "swagger",
@@ -22,22 +25,22 @@
   "author": "Joseph Spencer",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kogosoftwarellc/open-api/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3Aopenapi-framework"
+    "url": "https://github.com/commercebear/open-api/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3Aopenapi-framework"
   },
-  "homepage": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-framework#readme",
+  "homepage": "https://github.com/commercebear/open-api/tree/master/packages/openapi-framework#readme",
   "dependencies": {
     "difunc": "0.0.4",
-    "fs-routes": "^7.0.1",
+    "@commercebear/fs-routes": "^7.0.1",
     "glob": "*",
     "is-dir": "^1.0.0",
     "js-yaml": "^3.10.0",
-    "openapi-default-setter": "^7.0.1",
-    "openapi-request-coercer": "^7.0.1",
-    "openapi-request-validator": "^7.0.1",
-    "openapi-response-validator": "^7.0.1",
-    "openapi-schema-validator": "^7.0.1",
-    "openapi-security-handler": "^7.0.1",
-    "openapi-types": "^7.0.1",
+    "@commercebear/openapi-default-setter": "^7.0.1",
+    "@commercebear/openapi-request-coercer": "^7.0.1",
+    "@commercebear/openapi-request-validator": "^7.0.1",
+    "@commercebear/openapi-response-validator": "^7.0.1",
+    "@commercebear/openapi-schema-validator": "^7.0.1",
+    "@commercebear/openapi-security-handler": "^7.0.1",
+    "@commercebear/openapi-types": "^7.0.1",
     "ts-log": "^2.1.4"
   }
 }
