--- a/packages/openapi-request-coercer/package.json
+++ b/packages/openapi-request-coercer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi-request-coercer",
+  "name": "@commercebear/openapi-request-coercer",
   "version": "7.0.1",
   "description": "Coerce request properties according to an openapi parameter list.",
   "main": "./dist/index.js",
@@ -10,7 +10,10 @@
     "test-watch": "../../bin/tsc && ../../bin/mocha --watch-extensions ts -w",
     "test": "../../bin/mocha"
   },
-  "repository": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-request-coercer",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "https://github.com/commercebear/open-api",
   "keywords": [
     "openapi",
     "coercion",
@@ -21,11 +24,11 @@
   "author": "Joseph Spencer",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kogosoftwarellc/open-api/issues"
+    "url": "https://github.com/commercebear/open-api/issues"
   },
-  "homepage": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/openapi-request-coercer#readme",
+  "homepage": "https://github.com/commercebear/open-api/tree/master/packages/openapi-request-coercer#readme",
   "dependencies": {
-    "openapi-types": "^7.0.1",
+    "@commercebear/openapi-types": "^7.0.1",
     "ts-log": "^2.1.4"
   }
 }
