--- a/packages/restify-openapi/package.json
+++ b/packages/restify-openapi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restify-openapi",
+  "name": "@commercebear/restify-openapi",
   "version": "7.0.1",
   "description": "An unopinionated OpenAPI framework for restify",
   "scripts": {
@@ -7,7 +7,10 @@
     "test-watch": "true",
     "test": "true"
   },
-  "repository": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/restify-openapi",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "https://github.com/commercebear/open-api",
   "keywords": [
     "openapi",
     "swagger",
@@ -16,7 +19,7 @@
   "author": "Joseph Spencer",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kogosoftwarellc/open-api/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3Arestify-openapi"
+    "url": "https://github.com/commercebear/open-api/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3Arestify-openapi"
   },
-  "homepage": "https://github.com/kogosoftwarellc/open-api/tree/master/packages/restify-openapi#readme"
+  "homepage": "https://github.com/commercebear/open-api/tree/master/packages/restify-openapi#readme"
 }
