--- a/packages/openapi-framework/package.json
+++ b/packages/openapi-framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commercebear/openapi-framework",
-  "version": "7.0.1",
+  "version": "7.1.0-alpha.0",
   "description": "An OpenAPI framework for any web framework",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -29,18 +29,18 @@
   },
   "homepage": "https://github.com/commercebear/open-api/tree/master/packages/openapi-framework#readme",
   "dependencies": {
+    "@commercebear/fs-routes": "^7.1.0-alpha.0",
+    "@commercebear/openapi-default-setter": "^7.1.0-alpha.0",
+    "@commercebear/openapi-request-coercer": "^7.1.0-alpha.0",
+    "@commercebear/openapi-request-validator": "^7.1.0-alpha.0",
+    "@commercebear/openapi-response-validator": "^7.1.0-alpha.0",
+    "@commercebear/openapi-schema-validator": "^7.1.0-alpha.0",
+    "@commercebear/openapi-security-handler": "^7.1.0-alpha.0",
+    "@commercebear/openapi-types": "^7.1.0-alpha.0",
     "difunc": "0.0.4",
-    "@commercebear/fs-routes": "^7.0.1",
     "glob": "*",
     "is-dir": "^1.0.0",
     "js-yaml": "^3.10.0",
-    "@commercebear/openapi-default-setter": "^7.0.1",
-    "@commercebear/openapi-request-coercer": "^7.0.1",
-    "@commercebear/openapi-request-validator": "^7.0.1",
-    "@commercebear/openapi-response-validator": "^7.0.1",
-    "@commercebear/openapi-schema-validator": "^7.0.1",
-    "@commercebear/openapi-security-handler": "^7.0.1",
-    "@commercebear/openapi-types": "^7.0.1",
     "ts-log": "^2.1.4"
   }
 }
