--- a/packages/openapi-response-validator/package.json
+++ b/packages/openapi-response-validator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commercebear/openapi-response-validator",
-  "version": "7.0.1",
+  "version": "7.1.0-alpha.0",
   "description": "Validate a response according to an openapi schema.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/commercebear/open-api/tree/master/packages/openapi-response-validator#readme",
   "dependencies": {
-    "ajv": "^6.5.4",
-    "@commercebear/openapi-types": "^7.0.1"
+    "@commercebear/openapi-types": "^7.1.0-alpha.0",
+    "ajv": "^6.5.4"
   }
 }
