--- a/packages/openapi-types/package.json
+++ b/packages/openapi-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commercebear/openapi-types",
-  "version": "7.0.1",
+  "version": "7.1.0-alpha.0",
   "description": "Types for OpenAPI documents.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
