--- a/packages/restify-openapi/package.json
+++ b/packages/restify-openapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commercebear/restify-openapi",
-  "version": "7.0.1",
+  "version": "7.1.0-alpha.0",
   "description": "An unopinionated OpenAPI framework for restify",
   "scripts": {
     "cover": "true",
